--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pokedex with search, filters and types">
+    <meta name="description" content="An Alpine.js Pokedex application">
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Alpine.js · Pokédex</title>
 
