change icon and font

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body x-data="pokedex" class="bg-gray-100">
+<body x-data="pokedex" class="bg-gray-100 antialiased">
     <h1 class="text-2xl font-bold mb-4 text-center">Pokédex</h1>
 
     <div class="container mx-auto p-5">
